FIND_PACKAGE(TULIP REQUIRED)
FIND_PACKAGE(QtX REQUIRED)

SET(PLUGIN_NAME Infiniband)

MESSAGE(STATUS "Adding Infiniband Plugins.")
INCLUDE_DIRECTORIES(${IBAUTIL_INCLUDE_DIR} ${TULIP_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(${PLUGIN_NAME}-${TULIP_VERSION} SHARED routes.cpp topology.cpp fabric.cpp csv.cpp )
IF(APPLE)
        SET_TARGET_PROPERTIES(${PLUGIN_NAME}-${TULIP_VERSION} PROPERTIES MACOSX_RPATH ON)
ENDIF(APPLE)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${TULIP_VERSION} ${TULIP_CORE_LIBRARY} ${TULIP_GUI_LIBRARY} ${IBAUTIL_LIBRARY} ${RE2_LIBRARY} ${QT_LIBRARIES})
INSTALL(TARGETS ${PLUGIN_NAME}-${TULIP_VERSION} DESTINATION ${TULIP_PLUGINS_DIR})

